--- a/index.html
+++ b/index.html
@@ -1079,7 +1079,7 @@
             <div class="highlights-grid">
                 <div class="video-card">
                     <div class="video-thumbnail">
-                        <img src="vs century.jpg" alt="Video Highlight">
+                        <img src="ab 360.jpg" alt="Video Highlight">
                     </div>
                     <div class="video-overlay">
                         <div class="play-btn">▶</div>
@@ -1415,6 +1415,7 @@
     </script>
 </body>
 </html>
+
 
 
 
